--- a/frontend/pagos/pagos.html
+++ b/frontend/pagos/pagos.html
@@ -34,7 +34,7 @@
             <div class="sidebar__profile">
                 <img src="../img/empresario.png" alt="Foto de perfil" class="sidebar__profile-img">
                 <div class="sidebar__profile-info">
-                    <h3 class="sidebar__profile-name">Usuario Admin</h3>
+                    <h3 class="sidebar__profile-name">Tayleer</h3>
                     <span class="sidebar__profile-role">Administrador</span>
                 </div>
             </div>
